DSTEW-876 address review comments